Fixed that the Github stats went out of the screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -139,3 +139,9 @@ footer {
 .gallery-nav-btn:hover {
     background-color: #0056b3;
 }
+
+@media (max-width: 768px) {
+    .phone-check {
+        width: 80%;;
+    }
+}
